2001-10-02  Tambet Ingo  <tambet@ximian.com>

	* users-conf.in: Rewrote profiles and login.defs stuff.
	Removed/exchanged all old cruft so now it seems more like
	other 'up-to-date' backends.

	* xml.pl.in (xst_xml_format_pcdata): Don't use if ($name) conditions
	if 0 or empty string are valid values. Use if (defined ($name))
	instead.
	(xst_xml_print_comment): Implement.

2001-10-01  Arturo Espinosa Aldama  <arturo@ximian.com>

	* display-conf.in: Added mandrake-7.2 to the list of supported
	platforms.

	* network.pl.in (xst_network_rh62_parse_bootproto): typo caused
	bootproto to always be "none".

2001-09-28  Tambet Ingo  <tambet@ximian.com>

	* font.pl.in: Implemented addition and removal of TrueType and
	Type1 fonts for X. Currently works only with RH and derivates.

	(xfs_parse): Implementet xfs parser.

	* file.pl.in (xst_file_create_path): Added new parameter with nice
	default to set permissions.
	(xst_file_create_path_for_file): Ditto.

2001-09-27  Tambet Ingo  <tambet@ximian.com>

	* util.pl.in (xst_process_result_collect): Handle errors a bit better.

	* x.pl.in (x_probe_scan): Oops! I had two functions with same name
	and perl didin't even warn me about it! Removed one.

2001-09-25  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_rh_get_smb_desc): This removes
	the default "Samba Server" smb.conf string from redhat-like
	distros.

2001-09-24  Tambet Ingo  <tambet@ximian.com>

	* x.pl.in (x_xml_parse): Use standard report message for
	unexpected xml tag.

	* users-conf.in: Typos happen.

	* x.pl.in (x_parse_serverlayout_screen): Rewrote.
	Fixes bug #10790.

	* users-conf.in: Added missing report keywords. Moved one
	here from report.pl.in.

2001-09-21  Tambet Ingo  <tambet@ximian.com>

	* x.pl.in: Found and fixed some small typos. 

2001-09-21  Arturo Espinosa Aldama  <arturo@ximian.com>

	* util.pl.in (xst_process_result_collect): Exhaust buffer.

2001-09-21  Tambet Ingo  <tambet@ximian.com>
